tests/pass/ExceptionA.java
package pass;

import java.lang.Exception;

public class ExceptionA extends Exception {

}
