tests/fail/ExceptionNeverThrownInTry.java
package fail;

import java.lang.Exception;

public class ExceptionNeverThrownInTry {

	public static void main() {
		try {
			
		} catch (Exception e) {
		}
	}
	
}
